# global_knowledge

./: README.md  backup.sql  pyproject.toml  test.sql
src/global_knowledge/: auth.py  db.py  main.py  models.py  schemas.py
src/global_knowledge/routers/: admin.py  exam.py  quiz.py  router.py  test.py  user.py
src/global_knowledge/services/: admin.py  exam.py  quiz.py  test.py  user.py
