[tool.poetry]
name = "global-knowledge"
version = "0.1.0"
description = ""
authors = ["yoonju1030 <allrealjgt@gmail.com>"]
readme = "README.md"
packages = [{include = "global_knowledge", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
sqlalchemy = ">=2.0.39,<3.0.0"
ipykernel = "^6.29.5"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

